<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PooPee</string>
    <string name="contentDescription">contentDescription</string>
    <string name="admob_app_id" tools:ignore="MissingTranslation">ca-app-pub-2933424745841582~4534033734</string>
    <string name="banner_ad_unit_id" tools:ignore="MissingTranslation">ca-app-pub-2933424745841582/3959318660</string>
    <string name="interstitial_ad_unit_id" tools:ignore="MissingTranslation">ca-app-pub-2933424745841582/2251927237</string>
    <string name="rewarded_interstitial_ad_unit_id" tools:ignore="MissingTranslation">ca-app-pub-2933424745841582/4125087382</string>
    <string name="rewarded_interstitial_id" tools:ignore="MissingTranslation">ca-app-pub-2933424745841582/3347477742</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="login">login</string>
    <string name="logout">logout</string>
    <string name="confirm">confirm</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="complete">complete</string>
    <string name="modified">modify</string>
    <string name="change">change</string>
    <string name="update">update</string>
    <string name="setting">setting</string>
    <string name="current_version">Current version</string>
    <string name="new_version">New version</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone_number">Phone Number</string>
    <string name="delete">delete</string>
    <string name="report">report</string>
    <string name="send">send</string>
    <string name="send_mail">Send email</string>
    <string name="man">man</string>
    <string name="women">women</string>
    <string name="close">close</string>
    <string name="copy">copy</string>
    <string name="prev">prev</string>
    <string name="review">write a review</string>
    <string name="end">end</string>
    <string name="dialog_assign_new_version_update">There are new updates. We recommend updating for smooth use. \nDo you want to update?</string>
    <string name="dialog_force_new_version_update">There are new updates. It will be available after the update. \nAre you sure you want to update?</string>
    <string name="dialog_download_request">Toilet information download is required. Please check the communication environment and try again.</string>
    <string name="dialog_no_show">Never see again</string>
    <string name="dialog_finish">Are you sure you want to exit PooPee?</string>
    <string name="dialog_reward_01">View restroom details</string>
    <string name="dialog_reward_02">Watch an ad once and enjoy 24 hours\nwithout full-screen ads!</string>
    <string name="dialog_reward_03">Watch Ad to Continue</string>
    <string name="dialog_reward_04">Continue without Ad</string>
    <string name="toast_checking_service">Under service inspection</string>
    <string name="toast_loading_fail">Failed to load</string>
    <string name="toast_network_not_connected">Please check the network status and try again</string>
    <string name="toast_alphanumeric">Only alphanumeric characters are allowed</string>
    <string name="toast_alphanumeric_hangul">Only alphanumeric characters and Korean characters are allowed</string>
    <string name="toast_please_all_input">Please enter all fields</string>
    <string name="toast_please_name_input">Please enter your nickname</string>
    <string name="toast_login_condition">Please enter your ID / password</string>
    <string name="toast_login_fail">Login failed</string>
    <string name="toast_join_condition_01">Passwords do not match</string>
    <string name="toast_join_condition_02">Please select a gender</string>
    <string name="toast_join_complete">Sign up is complete</string>
    <string name="toast_join_id_fail">This ID is already taken</string>
    <string name="toast_update_complete">"It's corrected"</string>
    <string name="toast_delete_complete">I deleted it</string>
    <string name="toast_report_complete">I reported it</string>
    <string name="toast_copy_complete">I copied it to the clipboard.</string>
    <string name="toast_terms_check">Agree to all terms</string>
    <string name="toast_send_complete">Send is complete</string>
    <string name="toast_please_permission">This is a task that requires permission</string>
    <string name="toast_withdraw">Withdraw completed</string>
    <string name="gallery_select_dir">Select folder</string>
    <string name="gallery_show_all">View all</string>
    <string name="gallery_back_to_dir">Go to previous folder</string>
    <string name="gallery_upload">Upload</string>
    <string name="nav_text_01">My Info</string>
    <string name="nav_text_02">Notice</string>
    <string name="nav_text_03">Contact</string>
    <string name="nav_text_04">Setting</string>
    <string name="nav_text_05">Inquiry</string>
    <string name="nav_text_06">Login</string>
    <string name="nav_text_07">Toilet registration</string>
    <string name="nav_text_08">Share</string>
    <string name="nav_text_09">Donate</string>
    <string name="home_text_01">Place, address search</string>
    <string name="home_text_02">View Details</string>
    <string name="home_text_03">comment</string>
    <string name="home_text_04">like</string>
    <string name="home_text_05">Please enter a comment</string>
    <string name="home_text_06">Are you sure you want to delete?</string>
    <string name="home_text_07">Please enter reason for report</string>
    <string name="home_text_08">My location</string>
    <string name="home_text_09">Where are you looking for the bathroom?</string>
    <string name="home_text_10">Management agency</string>
    <string name="home_text_11">Edit</string>
    <string name="home_text_12">Report</string>
    <string name="home_text_13">Send my location</string>
    <string name="home_text_14">[PooPee]\nThis is my current location!\n</string>
    <string name="home_text_15">App Start</string>
    <string name="home_text_16">Navigation connection</string>
    <string name="home_text_17">Location Sharing</string>
    <string name="home_text_18">TMAP</string>
    <string name="home_text_19">KakaoNavi</string>
    <string name="home_text_20">KakaoTalk</string>
    <string name="home_text_21">SMS</string>
    <string name="home_text_22">Connect to the navigation app at that address</string>
    <string name="home_text_23">Share the location of the toilet to that address</string>
    <string name="home_text_24">Inquiries/Suggestions</string>
    <string name="home_text_25">Please enter your details</string>
    <string name="home_text_26">Naver Map</string>
    <string name="home_text_27">Once the report is completed, it will be reviewed and processed within 24 hours.</string>
    <string name="home_text_28">Maps</string>
    <string name="home_text_29">🔥 How to remove ads 🔥\n\nViewing a Coupang deal will remove full-screen ads for the rest of the day!</string>
    <string name="home_text_30">Continue Without</string>
    <string name="home_text_31">Remove Ads</string>
    <string name="home_text_32">"Ad isn't ready yet. Please try again soon."</string>
    <string name="login_01">Please login</string>
    <string name="login_02">Enter ID</string>
    <string name="login_03">Enter Password</string>
    <string name="login_04">Sign Up</string>
    <string name="login_05">Enter Password</string>
    <string name="login_06">Confirm Password</string>
    <string name="login_07">Enter password to change</string>
    <string name="login_08">Confirm password to change</string>
    <string name="login_09">Enter nickname</string>
    <string name="login_10">Duplicate check</string>
    <string name="login_11">Please enter within 6 ~ 20 letters and numbers</string>
    <string name="login_12">Username is available</string>
    <string name="login_14">Password must! Please remember</string>
    <string name="login_15">Agree to privacy policy</string>
    <string name="login_16">Subscribe Terms of Service</string>
    <string name="login_17">Consent to Terms of Service for Location-Based Services</string>
    <string name="login_18">View Details</string>
    <string name="menu_setting_01">Please login</string>
    <string name="menu_setting_02">logout</string>
    <string name="menu_setting_03">PUSH Notification</string>
    <string name="menu_setting_04">Privacy Policy</string>
    <string name="menu_setting_05">Terms of Service</string>
    <string name="menu_setting_06">Terms of Service for Location-Based Services</string>
    <string name="menu_setting_07">withdraw</string>
    <string name="menu_setting_08">Would you like to withdraw?</string>
    <string name="menu_donate_01">Was PooPee helpful to you?</string>
    <string name="menu_donate_02">Your donations greatly help the developer\nin maintaining the service!</string>
    <string name="menu_donate_03">Thank you for your donation. PooPee will strive to work even harder!!</string>
    <string name="toilet_option_01">Man</string>
    <string name="toilet_option_02">Women</string>
    <string name="toilet_option_03">Toilet bowl</string>
    <string name="toilet_option_04">Urinal</string>
    <string name="toilet_option_05">Disabled Toilet bowl</string>
    <string name="toilet_option_06">Disabled Urinal</string>
    <string name="toilet_option_07">Child Toilet bowl</string>
    <string name="toilet_option_08">Child Urinal</string>
    <string name="toilet_option_09">Unisex</string>
    <string name="toilet_option_10">Management agency</string>
    <string name="toilet_option_11">Management tel</string>
    <string name="toilet_option_12">Opening time</string>
    <string name="toilet_btn_01">report</string>
    <string name="toilet_btn_02">delete</string>
    <string name="toilet_btn_03">update</string>
    <string name="toilet_create_text_01">Search for a toilet address to register</string>
    <string name="toilet_create_text_02">Select on map</string>
    <string name="toilet_create_text_03">Choose a toilet location</string>
    <string name="toilet_create_text_04">Move the map to locate the toilet.</string>
    <string name="toilet_create_text_05">Toilet registration</string>
    <string name="toilet_create_text_06">Entering toilet information</string>
    <string name="toilet_create_text_07">Toilet name</string>
    <string name="toilet_create_text_08">Toilet name (up to 20 characters)</string>
    <string name="toilet_create_text_09">Toilet description</string>
    <string name="toilet_create_text_10">Enter toilet description</string>
    <string name="toilet_create_text_11">Toilet type</string>
    <string name="toilet_create_text_12">register</string>
    <string name="toilet_create_text_13">Completed registering the toilet</string>
    <string name="toilet_create_text_14">Toilet location search</string>
    <string name="permission_text_01">Permissions for using the app</string>
    <string name="permission_text_02">Location permissions</string>
    <string name="permission_text_03">Check current toilet information around me</string>
    <string name="permission_text_04">Storage permissions</string>
    <string name="permission_text_05">Store toilet information</string>
    <string name="permission_text_06">App permissions require the above two permissions to use the app for convenient use of the PooPee service.</string>
</resources>