<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/layout_dialog"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_base_dialog"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_public_pressed" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/dialog_reward_01"
            android:textColor="@color/text_main"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/dialog_reward_02"
            android:textColor="@color/text_main"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_rewarded_ad"
            style="@style/base_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_rewarded_ad"
            android:lineSpacingExtra="6sp"
            android:text="@string/dialog_reward_03"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_rewarded_interstitial_ad"
            style="@style/base_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_rewarded_interstitial_ad"
            android:lineSpacingExtra="6sp"
            android:text="@string/dialog_reward_04"
            android:textColor="#aaaaaa" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp" />

    </LinearLayout>

</RelativeLayout>