<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/layout_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_base_dialog"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.google.android.gms.ads.NativeExpressAdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ad_view"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_margin="2dp"
            android:background="#EFEFEF"
            ads:adSize="300x250"
            ads:adUnitId="@string/banner_ad_unit_id" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/dialog_finish"
            android:textColor="#292d34"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:lineSpacingExtra="6sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/review"
                android:textColor="#a0a4aa"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/dialog_button_height"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:lineSpacingExtra="6sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/end"
                android:textColor="@color/primary"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp" />

    </LinearLayout>

</RelativeLayout>