<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/layout_dialog"
        android:layout_width="@dimen/dialog_main_width"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_base_dialog"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="16dp"
            android:text="@string/home_text_24"
            android:textColor="#292d34"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_content"
            style="@style/base_edt"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="start"
            android:hint="@string/home_text_25"
            android:inputType="textMultiLine"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#a0a4aa"
                android:textSize="13sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/dialog_button_height"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="#a0a4aa"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>