<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="@dimen/dialog_main_width"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_dialog"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="74dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitXY"
            android:src="@drawable/img_powerpoo"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_dialog"
        android:layout_width="@dimen/dialog_main_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_base_dialog"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center_horizontal"
            android:letterSpacing="-0.03"
            android:lineSpacingExtra="4sp"
            android:text="@string/permission_text_01"
            android:textColor="#292d34"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_powergps"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/permission_text_02"
                    android:textColor="#292d34"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/permission_text_03"
                    android:textColor="#8991a2"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_powersave"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="6sp"
                    android:text="@string/permission_text_04"
                    android:textColor="#292d34"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/permission_text_05"
                    android:textColor="#8991a2"
                    android:textSize="12sp" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp"
            android:background="#d9dde5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/permission_text_06"
            android:textColor="#8991a2"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="28dp"
            android:background="#d9dde5" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>